--- a/Bamyancaves.html
+++ b/Bamyancaves.html
@@ -25,11 +25,11 @@
  
  
   <div id="aksgerd" style="position:relativ;left:4px;">
-<marquee> <img src="pictures/pic(1).jpg" style="width:30px;height:35px;border-radius:50%; position:relative;top:3px; position:relativ;left:4px;">
- <img src="pictures/pic(2).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;" />
-  <img src="pictures/pic(3).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
- <img src="pictures/pic(4).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
- <img src="pictures/pic(5).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
+<marquee> <img src="./pictures/pic(1).jpg" style="width:30px;height:35px;border-radius:50%; position:relative;top:3px; position:relativ;left:4px;">
+ <img src="./pictures/pic(2).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;" />
+  <img src="./pictures/pic(3).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
+ <img src="./pictures/pic(4).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
+ <img src="./pictures/pic(5).jpg" style="width:30px;height:35px;border-radius:50%;position:relative;top:3px; position:relativ;left:4px;"/>
 </marquee>
 </div>
  <div id="zeraksgerd"><p style="padding-top:10px;">links</p></div>
@@ -42,7 +42,7 @@
 <a href="www.wekipidia.com" style="text-decoration:none;"> &#9755; WEKIPEDIAD</a>
  </div>
  <div id="especialphoto" style="text-align:center; padding-top:6px; position:relative;top:3px;">Especial Photos</div>
- <div id="aksakhar"><img src="pictures/pic(10).jpg"/></div>
+ <div id="aksakhar"><img src="./pictures/pic(10).jpg"/></div>
 
 
 <ul id="sa">Login
