--- a/Bamyancaves.html
+++ b/Bamyancaves.html
@@ -217,7 +217,7 @@ Facebook: Qurbanali Motahari</p>
 <p style="text-align:center; background-color:;display:inline;">copy right &copy 2021 &nbsp; </p>
 <p style="display:inline; border-left:2px solid white;"> &nbsp;All Right Reserved To Mr Qurban Motahari </p>
 <!--
-<img src="pictures/f.gif" style="position:relative;left:100px;" />
+<img src="./pictures/f.gif" style="position:relative;left:100px;" />
 <p style="display:inline; position:relative;left:100px;border-left:3px solid white;">Bamyan local music</p> -->
 </footer>
 </body>
